# bottleneck-backend

./: Dockerfile  LICENSE  README.md  component_handler.py  data.py  errors.py  get_data.py  handle_result.py  logging_config.py  main.py  model.py  prompts.py  pyproject.toml  validation.py
data/: CPU_UserBenchmarks.csv  CPU_UserBenchmarks.csv:Zone.Identifier  GPU_UserBenchmarks.csv  GPU_UserBenchmarks.csv:Zone.Identifier  RAM_UserBenchmarks.csv  RAM_UserBenchmarks.csv:Zone.Identifier
models/: best_loss.json
models/best_model/: config.json
